--- a/src/projects/jefferson-riverfront/index.html
+++ b/src/projects/jefferson-riverfront/index.html
@@ -119,7 +119,7 @@ banner:
                     <input type="email" name="email" required class="w-full border p-2 rounded"
                         placeholder="your.email@example.com">
 
-                    <button type="submit" class="w-full inline-flex items-center justify-center gap-2 px-8 py-4 text-base min-w-[200px] bg-gradient-to-br from-brand-wood to-brand-walnut text-brand-navy border-brand-walnut hover:from-brand-walnut hover:to-brand-wood hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0 inline-flex items-center justify-center gap-2 border transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-wood focus-visible:ring-offset-2 rounded-lg font-semibold mt-4">
+                    <button type="submit" class="w-full inline-flex items-center justify-center gap-2 px-8 py-4 text-base min-w-[200px] bg-gradient-to-br from-brand-wood to-brand-walnut text-brand-navy border-brand-walnut hover:from-brand-walnut hover:to-brand-wood hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0 border transition-all duration-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-wood focus-visible:ring-offset-2 rounded-lg font-semibold mt-4">
                         Request Tour
                     </button>
                 </form>
