--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     const popupContent = `
                         <div class="text-center min-w-[200px] p-2">
                             <div class="h-24 w-full mb-2 rounded overflow-hidden bg-slate-100">
-                                <img src="/public/images/${imgPath}" class="w-full h-full object-cover" onerror="this.src='/public/images/banners/hero-property-banner.webp'">
+                                <img src="/images/${imgPath}" class="w-full h-full object-cover" onerror="this.src='/public/images/banners/hero-property-banner.webp'">
                             </div>
                             <b class="text-brand-navy block mb-1 text-sm">${p.title}</b>
                             <span class="text-xs text-slate-500 block mb-2">${p.bedrooms || '?'} Bed • ${p.bathrooms || '?'} Bath</span>
